[gd_scene load_steps=15 format=3 uid="uid://dve7my1rxi5qq"]

[ext_resource type="Theme" uid="uid://bnswwcwcdwyju" path="res://MainTheme.tres" id="1_3dxm6"]
[ext_resource type="Script" uid="uid://fh5qo6ewf1rd" path="res://Main.gd" id="2_lgr22"]
[ext_resource type="Texture2D" uid="uid://5intanaegm0y" path="res://Assets/DoesNotContain.png" id="4_03owx"]
[ext_resource type="Texture2D" uid="uid://brd5leiw4ok0c" path="res://Assets/IconEmpty.png" id="4_20pc6"]
[ext_resource type="Texture2D" uid="uid://c7cvro61v15g2" path="res://Assets/DoesNotContainPressed.png" id="5_03owx"]
[ext_resource type="Texture2D" uid="uid://bht8nphv2ra42" path="res://Assets/IconEmptyPressed.png" id="5_5vvyt"]
[ext_resource type="Texture2D" uid="uid://dnydrcos0cyaw" path="res://Assets/IconIsNotAndDoesContain.png" id="5_wkp8b"]
[ext_resource type="Texture2D" uid="uid://bvxekqfxds077" path="res://Assets/IconIs.png" id="6_20pc6"]
[ext_resource type="Texture2D" uid="uid://wkj8erwwogdm" path="res://Assets/IconIsNotAndDoesContainPressed.png" id="7_wkp8b"]
[ext_resource type="Texture2D" uid="uid://d0tbpr8fiaxej" path="res://Assets/IconIsPressed.png" id="9_20pc6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wkp8b"]
content_margin_left = 25.0
content_margin_top = 25.0
content_margin_right = 25.0
content_margin_bottom = 25.0
bg_color = Color(0.083392, 0.083392, 0.08339202, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4326237, 0.43262374, 0.4326237, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_20pc6"]
content_margin_left = 25.0
content_margin_top = 25.0
content_margin_right = 25.0
content_margin_bottom = 25.0
bg_color = Color(0.29219002, 0.29219005, 0.29219, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4326237, 0.43262374, 0.4326237, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vvyt"]
content_margin_left = 25.0
content_margin_top = 25.0
content_margin_right = 25.0
content_margin_bottom = 25.0
bg_color = Color(0.083392, 0.083392, 0.08339202, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4326237, 0.43262374, 0.4326237, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6i3y"]
content_margin_left = 25.0
content_margin_top = 25.0
content_margin_right = 25.0
content_margin_bottom = 25.0
bg_color = Color(0.29219002, 0.29219005, 0.29219, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4326237, 0.43262374, 0.4326237, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Main" type="Control" node_paths=PackedStringArray("label_word_count", "label_word_list", "texture_button_black", "texture_button_grey", "texture_button_yellow", "texture_button_green")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3dxm6")
script = ExtResource("2_lgr22")
label_word_count = NodePath("MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/VBoxContainerWordList/VBoxContainerResults/LabelCount")
label_word_list = NodePath("MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/VBoxContainerWordList/PanelContainer/MarginContainer/ScrollContainer/Label")
texture_button_black = NodePath("MarginContainer/VBoxContainer/VBoxContainerPainting/HBoxContainer/TextureButtonBlack")
texture_button_grey = NodePath("MarginContainer/VBoxContainer/VBoxContainerPainting/HBoxContainer/TextureButtonGrey")
texture_button_yellow = NodePath("MarginContainer/VBoxContainer/VBoxContainerPainting/HBoxContainer/TextureButtonYellow")
texture_button_green = NodePath("MarginContainer/VBoxContainer/VBoxContainerPainting/HBoxContainer/TextureButtonGreen")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainerTop" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainerTop"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 5

[node name="Button0,0" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button0,1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button0,2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button0,3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button0,4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button1,0" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button1,1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button1,2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button1,3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button1,4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button2,0" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button2,1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button2,2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button2,3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button2,4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button3,0" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button3,1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button3,2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button3,3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button3,4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button4,0" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button4,1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button4,2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button4,3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button4,4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button5,0" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button5,1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button5,2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button5,3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="Button5,4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " "

[node name="VBoxContainerWordList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainerResults" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/VBoxContainerWordList"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/VBoxContainerWordList/VBoxContainerResults"]
layout_mode = 2
text = "Results"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="LabelCount" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/VBoxContainerWordList/VBoxContainerResults"]
layout_mode = 2
size_flags_horizontal = 4
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/VBoxContainerWordList"]
custom_minimum_size = Vector2(0, 570)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/VBoxContainerWordList/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/VBoxContainerWordList/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainerTop/HBoxContainer/VBoxContainerWordList/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
uppercase = true

[node name="VBoxContainerPainting" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="LabelTitle" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainerPainting"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Select a Color to Paint Letter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainerPainting"]
layout_mode = 2
alignment = 1

[node name="TextureButtonBlack" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainerPainting/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("4_20pc6")
texture_pressed = ExtResource("5_5vvyt")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainerPainting/HBoxContainer/TextureButtonBlack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Clear"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButtonGrey" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainerPainting/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("4_03owx")
texture_pressed = ExtResource("5_03owx")

[node name="TextureButtonYellow" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainerPainting/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("5_wkp8b")
texture_pressed = ExtResource("7_wkp8b")

[node name="TextureButtonGreen" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainerPainting/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("6_20pc6")
texture_pressed = ExtResource("9_20pc6")

[node name="HBoxContainerControls" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
alignment = 1

[node name="ButtonReset" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerControls"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_wkp8b")
theme_override_styles/pressed = SubResource("StyleBoxFlat_20pc6")
text = "Reset"

[node name="ButtonQuit" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerControls"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_5vvyt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c6i3y")
text = "Quit"

[connection signal="toggled" from="MarginContainer/VBoxContainer/VBoxContainerPainting/HBoxContainer/TextureButtonBlack" to="." method="_on_texture_button_black_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/VBoxContainerPainting/HBoxContainer/TextureButtonGrey" to="." method="_on_texture_button_grey_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/VBoxContainerPainting/HBoxContainer/TextureButtonYellow" to="." method="_on_texture_button_yellow_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/VBoxContainerPainting/HBoxContainer/TextureButtonGreen" to="." method="_on_texture_button_green_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainerControls/ButtonReset" to="." method="_on_button_reset_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainerControls/ButtonQuit" to="." method="_on_button_quit_pressed"]
